@@ -498,3 +498,4 @@ Issue #2164081 by johnv: Removed code that hides Workflow Form on unpublished no
 Issue #2241577 by johnv: Removed dependency on Features module. Now you can enable a workflow feature without!
 Issue #2217291: Added new view + view_mode 'history_tab', to create customizable tab, for multiple workflows.
 Issue #0443094: Fixed typo in workflow_admin_paths_alter().
+Issue #2241577 by preddy: Added check for existing workflow in WorkflowConfigTransition::save().
